# ml-project-template

./: README.md  copier.yml  pyproject.toml
copier-python-template/: pyproject.toml.jinja
copier-python-template/.github/: PULL_REQUEST_TEMPLATE.md.jinja
copier-python-template/src/: params.yaml  settings.py.jinja
copier-python-template/src/common/: constants.py  enums.py
copier-python-template/src/core/: parser.py  pipeline_step.py  predictor.py  preprocess.py  stratification.py  test.py  trainer.py
copier-python-template/src/features/: feature_engineer.py  feature_engineer_pipeline_step.py  feature_engineer_step.py  rolling_fe_config.py  split_dataset_pipeline_step.py  split_dataset_task.py
copier-python-template/src/pipelines/: pipeline.py  train_pipeline.py
copier-python-template/src/preprocess/: preprocess_pipeline_step.py  preprocessor.py  preprocessor_step.py
copier-python-template/src/train/: train_pipeline_step.py
copier-python-template/src/utilities/: transformers.py  utils.py
copier-python-template/src/visualization/: plotting_pipeline_step.py
copier-python-template/{{doc_dir}}/: DEVELOPER_GUIDE.md.jinja  README.md.jinja
